--- a/docs/modules/named-module/pages/index1.adoc
+++ b/docs/modules/named-module/pages/index1.adoc
@@ -111,6 +111,21 @@ Per Device
 
 * Fill out the form to get started with a free trial of Moki’s groundbreaking customer-facing, single-purpose devices.
 
+= 28. Awingu 
+
+* $90 Per Concurrent User, Per Year
+
+= 29. GoTo Resolve  
+
+* Starting Price: $69 Per Month
+
+= 30 WipeDrive
+
+* $19.95/one-time/drive
+
+
+
+
 
 
 
